Modificación id del div

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input id="filas">Numero de filas </input>
     <button type="button" onclick="inicialitzaJoc()">Create table</button>
     <button type="button" onclick="erasetable()">Esborra taula</button>
-    <div id="puticlub"></div>
+    <div id="tableOrigin"></div>
 </body>
 
 </html>
